--- a/Front/cilent/assets/css/product-detail.css
+++ b/Front/cilent/assets/css/product-detail.css
@@ -222,6 +222,8 @@ main {
 .product-details .cart-prices {
     margin: 18px 0;
     /* margin: 24px 0; */
+    display: flex;
+    align-items: center;
 }
 
 
@@ -1531,7 +1533,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 
 
-.right-box .cart-prices .dis-price {
+ .cart-prices .dis-price {
     color: #000000 !important;
     font-weight: 400 !important;
     text-decoration: line-through !important;
@@ -1539,14 +1541,14 @@ input[type="number"]::-webkit-outer-spin-button {
     /* font-size: 14px !important; */
 }
 
-.right-box .cart-prices .dis {
+ .cart-prices .dis {
     color: #d90000 !important;
     font-weight: 600 !important;
     font-size: 12px !important;
     /* font-size: 16px !important; */
 }
 
-.right-box .cart-prices .sell {
+ .cart-prices .sell {
     color: #000000 !important;
     font-weight: 600 !important;
     font-size: 12px !important;
