--- a/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/Read.cshtml
+++ b/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/Read.cshtml
@@ -1,4 +1,6 @@
-﻿@model Connection
+﻿@using Vanguard.Areas.Admin.ViewModels.Email
+
+@model SendEmailVM
 @section style{
     <link rel="shortcut icon" type="image/png" href="~/admin/images/favicon.png">
     <link href="~/admin/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
@@ -21,50 +23,55 @@
                     <div class="card-body">
                         <div class="email-left-box generic-width px-0 mb-5">
                             <div class="p-0">
-                                <a href="~/admin/email-compose.html" class="btn btn-primary btn-block">Compose</a>
+                                <a asp-action="Compose" class="btn btn-primary btn-block">Compose</a>
                             </div>
                             <div class="mail-list rounded mt-4">
-                                <a asp-controller="email" asp-action="inbox" class="list-group-item active"><i class="fa fa-inbox font-18 align-middle me-2"></i> Inbox <span class="badge badge-primary badge-sm float-end">198</span> </a>
-                        
+                                <a asp-controller="email" asp-action="inbox" class="list-group-item active"><i class="fa fa-inbox font-18 align-middle me-2"></i> Inbox <span class="badge badge-primary badge-sm float-end">@ViewData["InboxCount"].ToString()</span> </a>
+                                <a asp-controller="email" asp-action="send" class="list-group-item "><i class="fa fa-paper-plane font-18 align-middle me-2"></i> Sent   </a>
                             </div>
                             
                         </div>
                         <div class="email-right-box ms-0 ms-sm-4 ms-sm-0">
                             <div class="row">
                                 <div class="col-12">
-                                    <div class="right-box-padding">
+                                    <form method="post" asp-action="SendEmail" class="right-box-padding">
                                         <div class="toolbar mb-4" role="toolbar">
                                             <div class="btn-group mb-1">
-                                                <button id="@Model.Id" class="btn btn-primary light px-3 message-trash" type="button">
+                                                <button id="@Model.Message.Id" class="btn btn-primary light px-3 message-trash" type="button">
                                                     <i class="fa-solid fa-trash-can"></i>
                                                 </button>
                                             </div>
                                         </div>
                                         <div class="read-content">
-                                             
                                             <div class="media mb-2 mt-3">
                                                 <div class="media-body">
-                                            
-
-                                                    <span class="pull-end">@Model.CreatedDate.ToShortTimeString()</span>
-                                                    <h4 class="my-1 text-primary">@Model.Name</h4>
+                                                    <span class="pull-end">@Model.Message.CreatedDate.ToShortTimeString()</span>
+                                                    <h4 class="my-1 text-primary">@Model.Message.Name</h4>
                                                     <p class="read-content-email">
-                                                        To: Me, @Model.Email
+                                                        To: Me, @Model.Message.Email
                                                     </p>
                                                 </div>
                                             </div>
                                             <div class="read-content-body">
-                                                <h6 class="mb-4">@Model.Message</h6>
+                                                <h6 class="mb-4">@Model.Message.Message</h6>
                                             </div>
-                                          
+
+                                            <!-- Hidden fields for the Message properties -->
+                                            <input type="hidden" asp-for="Message.Id" />
+                                            <input type="hidden" asp-for="Message.Name" />
+                                            <input type="hidden" asp-for="Message.Email" />
+                                            <input type="hidden" asp-for="Message.CreatedDate" />
+                                            <input type="hidden" asp-for="Message.IsRead" />
+
                                             <div class="mb-3 pt-3">
-                                                <textarea name="write-email" id="write-email" cols="30" rows="5" class="form-control" placeholder="It's really an amazing.I want to know more about it..!"></textarea>
+                                                <textarea asp-for="Email" id="write-email" cols="30" rows="5" class="form-control" placeholder="It's really an amazing. I want to know more about it..!"></textarea>
                                             </div>
                                         </div>
                                         <div class="text-end">
-                                            <button class="btn btn-primary " type="button">Send</button>
+                                            <button class="btn btn-primary" type="submit">Send</button>
                                         </div>
-                                    </div>
+                                    </form>
+
                                 </div>
                             </div>
                         </div>
