--- a/Back/Vanguard/Vanguard/Views/Shared/_Layout.cshtml
+++ b/Back/Vanguard/Vanguard/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject UserManager<Vanguard.Models.AppUser> UserManager
+
 @{
     var user = UserManager.GetUserAsync(User).Result;
     var basketCount = TempData["BasketItemCount"] != null ? TempData["BasketItemCount"].ToString() : "0";
@@ -310,7 +311,6 @@
                         <ul>
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Legal & Privacy</a></li>
                             <li><a asp-controller="Setting" asp-action="Index" asp-route-id="1">My Account</a></li>
                             @if (user!=null)
                             {
@@ -330,7 +330,6 @@
                         <ul>
                             <li><a asp-controller="Shop" asp-action="Index">Shop</a></li>
                             <li><a asp-controller="Blog" asp-action="Index">Blog</a></li>
-                            <li><a asp-controller="Blog" asp-action="Index">Gift Card</a></li>
                         </ul>
                 </div>
 
@@ -341,13 +340,8 @@
 
                 <h3>Subscribe</h3>
 
-                <form class="subscribe-form">
-                    <p>Be the first to get the latest news about trends, promotions, and much more!</p>
-                    <input type="email" placeholder="Enter your email">
-                    <div>
-                        <button type="submit" href="#">JOIN</button>
-                    </div>
-                </form>
+                @* @await Component.InvokeAsync("Subscription") *@
+                @await Component.InvokeAsync("Subscription", new { sub = new Vanguard.Models.Subscription() })
             </div>
 
         </div>
