--- a/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/Inbox.cshtml
+++ b/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/Inbox.cshtml
@@ -29,8 +29,8 @@
                             </div>
                             <div class="mail-list rounded mt-4">
                                 <a asp-controller="email" asp-action="inbox" class="list-group-item active"><i class="fa fa-inbox font-18 align-middle me-2"></i> Inbox <span class="badge badge-primary badge-sm float-end inbox-count">@Model.Count()</span> </a>
-                                <a asp-controller="email" asp-action="send" class="list-group-item"><i class="fa fa-paper-plane font-18 align-middle me-2"></i>Sent</a> <a href="javascript:void(0);" class="list-group-item">
-                                </a>
+                                <a asp-controller="email" asp-action="send" class="list-group-item"><i class="fa fa-paper-plane font-18 align-middle me-2"></i>Sent</a>
+                                <a asp-controller="email" asp-action="Reply" class="list-group-item"><i class="bi bi-reply-fill font-18 align-middle me-2"></i>Reply</a>
                             </div>
                         </div>
                         <div class="email-right-box ms-0 ms-sm-4 ms-sm-0">
@@ -52,7 +52,7 @@
                                     </button>
                                 </div>
                                 <div class="btn-group mb-1">
-                                    <a asp-controller="email" asp-action="inbox" class="btn btn-primary light px-3"  >
+                                    <a asp-controller="email" asp-action="inbox" class="btn btn-primary light px-3">
                                         <i class="ti-reload"></i>
                                     </a>
                                 </div>
@@ -78,7 +78,7 @@
                                                     </div>
                                                 </div>
                                                 <a asp-action="Read" asp-route-id="@mes.Id" class="col-mail col-mail-2">
-                                          
+
 
                                                     <div style="font-weight:700;color:#fff" class="subject">@mes.Message</div>
                                                     <div style="font-weight:700;color:#fff" class="date">@mes.CreatedDate.ToShortTimeString()</div>
@@ -114,18 +114,18 @@
 
                                 <!-- panel -->
                                 @* <div class="row mt-4">
-                                    <div class="col-12 ps-3">
-                                        <nav>
-                                            <ul class="pagination pagination-gutter pagination-primary pagination-sm no-bg">
-                                                <li class="page-item page-indicator"><a class="page-link" href="javascript:void(0);"><i class="la la-angle-left"></i></a></li>
-                                                <li class="page-item "><a class="page-link" href="javascript:void(0);">1</a></li>
-                                                <li class="page-item active"><a class="page-link" href="javascript:void(0);">2</a></li>
-                                                <li class="page-item"><a class="page-link" href="javascript:void(0);">3</a></li>
-                                                <li class="page-item"><a class="page-link" href="javascript:void(0);">4</a></li>
-                                                <li class="page-item page-indicator"><a class="page-link" href="javascript:void(0);"><i class="la la-angle-right"></i></a></li>
-                                            </ul>
-                                        </nav>
-                                    </div>
+                                <div class="col-12 ps-3">
+                                <nav>
+                                <ul class="pagination pagination-gutter pagination-primary pagination-sm no-bg">
+                                <li class="page-item page-indicator"><a class="page-link" href="javascript:void(0);"><i class="la la-angle-left"></i></a></li>
+                                <li class="page-item "><a class="page-link" href="javascript:void(0);">1</a></li>
+                                <li class="page-item active"><a class="page-link" href="javascript:void(0);">2</a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);">3</a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);">4</a></li>
+                                <li class="page-item page-indicator"><a class="page-link" href="javascript:void(0);"><i class="la la-angle-right"></i></a></li>
+                                </ul>
+                                </nav>
+                                </div>
                                 </div> *@
                             </div>
                         </div>
@@ -141,7 +141,7 @@
             document.addEventListener('DOMContentLoaded', function () {
                 document.querySelector('.message-read').addEventListener('click', function () {
                     var ids = [];
-                   
+
 
                     document.querySelectorAll('.message .inbox-cb:checked').forEach(function (checkbox) {
                         ids.push(parseInt(checkbox.id));
@@ -155,7 +155,7 @@
                     });
 
                     console.log(ids);
-           
+
 
                     fetch('ReadAll', {
                         method: 'POST',
@@ -187,7 +187,7 @@
                     document.querySelectorAll('.message .inbox-cb:checked').forEach(function (checkbox) {
                         ids.push(parseInt(checkbox.id));
                         checkbox.closest('.message').remove();
-              
+
                     });
                     console.log(ids);
 
