--- a/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/Send.cshtml
+++ b/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/Send.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Connection>
+﻿@model List<EmailSend>
 
 @section style {
     <link rel="shortcut icon" type="image/png" href="~/admin/images/favicon.png">
@@ -15,7 +15,7 @@
         <div class="row page-titles">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item active"><a href="~/admin/javascript:void(0)">Email</a></li>
-                <li class="breadcrumb-item"><a href="~/admin/javascript:void(0)">Inbox</a></li>
+                <li class="breadcrumb-item"><a href="~/admin/javascript:void(0)">Send</a></li>
             </ol>
         </div>
         <!-- row -->
@@ -29,8 +29,8 @@
                             </div>
                             <div class="mail-list rounded mt-4">
                                 <a asp-controller="email" asp-action="inbox" class="list-group-item "><i class="fa fa-inbox font-18 align-middle me-2"></i> Inbox <span class="badge badge-primary badge-sm float-end inbox-count">@ViewData["InboxCount"].ToString()</span> </a>
-                                <a asp-controller="email" asp-action="send" class="list-group-item active"><i class="fa fa-paper-plane font-18 align-middle me-2"></i>Sent</a> <a href="javascript:void(0);" class="list-group-item">
-                                </a>
+                                <a asp-controller="email" asp-action="send" class="list-group-item active"><i class="fa fa-paper-plane font-18 align-middle me-2"></i>Send</a>
+                                <a asp-controller="email" asp-action="Reply" class="list-group-item"><i class="bi bi-reply-fill font-18 align-middle me-2"></i>Reply</a>
                             </div>
                         </div>
                         <div class="email-right-box ms-0 ms-sm-4 ms-sm-0">
@@ -41,88 +41,43 @@
                                         <label class="form-check-label" for="checkAll"></label>
                                     </div>
                                 </div>
-                                
+                          
                                 <div class="btn-group mb-1">
                                     <button class="btn btn-primary light px-3 message-trash" type="button">
                                         <i class="fa-solid fa-trash-can"></i>
                                     </button>
                                 </div>
-                                <div class="btn-group mb-1">
-                                    <a asp-controller="email" asp-action="inbox" class="btn btn-primary light px-3">
-                                        <i class="ti-reload"></i>
-                                    </a>
-                                </div>
+                           
 
                             </div>
                             <div class="email-list mt-3">
 
-                                @foreach (var mes in Model)
+                                @foreach (var send in Model)
                                 {
-                                    if (!mes.IsRead)
-                                    {
-                                        <div class="message">
-                                            <div>
-                                                <div class="d-flex message-single">
-                                                    <div class="ps-1 align-self-center">
-                                                        <div class="form-check custom-checkbox">
-                                                            <input type="checkbox" class="form-check-input inbox-cb" id="@mes.Id">
-                                                            <label class="form-check-label" for="@mes.Id"></label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="ms-2">
-                                                        <button class="border-0 bg-transparent align-middle p-0"></button>
+                                    <div class="message">
+                                        <div>
+                                            <div class="d-flex message-single">
+                                                <div class="ps-1 align-self-center">
+                                                    <div class="form-check custom-checkbox">
+                                                        <input type="checkbox" class="form-check-input inbox-cb" id="@send.Id">
+                                                        <label class="form-check-label" for="@send.Id"></label>
                                                     </div>
                                                 </div>
-                                                <a asp-action="SendRead" asp-route-id="@mes.Id" class="col-mail col-mail-2">
-
-
-                                                    <div style="font-weight:700;color:#fff" class="subject">@mes.Message</div>
-                                                    <div style="font-weight:700;color:#fff" class="date">@mes.CreatedDate.ToShortTimeString()</div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <div class="message unread">
-                                            <div>
-                                                <div class="d-flex message-single">
-                                                    <div class="ps-1 align-self-center">
-                                                        <div class="form-check custom-checkbox">
-                                                            <input type="checkbox" class="form-check-input inbox-cb" id="@mes.Id">
-                                                            <label class="form-check-label" for="@mes.Id"></label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="ms-2">
-                                                        <button class="border-0 bg-transparent align-middle p-0"></button>
-                                                    </div>
+                                                <div class="ms-2">
+                                                    <button class="border-0 bg-transparent align-middle p-0"></button>
                                                 </div>
-                                                <a asp-action="SendRead" asp-route-id="@mes.Id" style="font-weight:700" class="col-mail col-mail-2">
-                                                    <div class="subject">@mes.Message</div>
-                                                    <div class="date">@mes.CreatedDate.ToShortTimeString()</div>
-                                                </a>
                                             </div>
+                                            <a asp-action="SendRead" asp-route-id="@send.Id" class="col-mail col-mail-2">
+                                                <div style="font-weight:700;color:#fff" class="subject">@send.Subject</div>
+                                                <div style="font-weight:700;color:#fff" class="date">@send.CreatedDate.ToShortTimeString()</div>
+                                            </a>
                                         </div>
-                                    }
+                                    </div>
                                 }
 
 
 
-                                <!-- panel -->
-                                @* <div class="row mt-4">
-                                <div class="col-12 ps-3">
-                                <nav>
-                                <ul class="pagination pagination-gutter pagination-primary pagination-sm no-bg">
-                                <li class="page-item page-indicator"><a class="page-link" href="javascript:void(0);"><i class="la la-angle-left"></i></a></li>
-                                <li class="page-item "><a class="page-link" href="javascript:void(0);">1</a></li>
-                                <li class="page-item active"><a class="page-link" href="javascript:void(0);">2</a></li>
-                                <li class="page-item"><a class="page-link" href="javascript:void(0);">3</a></li>
-                                <li class="page-item"><a class="page-link" href="javascript:void(0);">4</a></li>
-                                <li class="page-item page-indicator"><a class="page-link" href="javascript:void(0);"><i class="la la-angle-right"></i></a></li>
-                                </ul>
-                                </nav>
-                                </div>
-                                </div> *@
+
                             </div>
                         </div>
                     </div>
@@ -135,45 +90,7 @@
     @section script {
         <script>
             document.addEventListener('DOMContentLoaded', function () {
-                document.querySelector('.message-read').addEventListener('click', function () {
-                    var ids = [];
-
-
-                    document.querySelectorAll('.message .inbox-cb:checked').forEach(function (checkbox) {
-                        ids.push(parseInt(checkbox.id));
-
-                        let message = checkbox.closest('.message');
-                        let subject = message.querySelector('.subject');
-                        let date = message.querySelector('.date');
-
-                        subject.style.removeProperty('color');
-                        date.style.removeProperty('color');
-                    });
-
-                    console.log(ids);
-
-
-                    fetch('ReadAll', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/x-www-form-urlencoded'
-                        },
-                        body: 'ids=' + ids.join('&ids=')
-                    })
-                        .then(response => {
-                            if (!response.ok) {
-                                throw new Error('Network response was not successful');
-                            }
-                            return response.json();
-                        })
-                        .then(data => {
-                            console.log('Messages marked as read', data);
-                        })
-                        .catch(error => {
-                            console.error('A problem occurred during the fetch operation:', error);
-                        });
-                });
-
+          
 
                 document.querySelector('.message-trash').addEventListener('click', function () {
 
@@ -191,7 +108,7 @@
                     let newCount = initialCount - removedCount;
                     inboxCountElement.innerText = newCount;
 
-                    fetch('EmailDelete', {
+                    fetch('SendDelete', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/x-www-form-urlencoded'
