--- a/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/SendRead.cshtml
+++ b/Back/Vanguard/Vanguard/Areas/Admin/Views/Email/SendRead.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Vanguard.Areas.Admin.ViewModels.Email
 
-@model SendEmailVM
+@model EmailSend
 @section style {
     <link rel="shortcut icon" type="image/png" href="~/admin/images/favicon.png">
     <link href="~/admin/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
@@ -11,7 +11,8 @@
 
         <div class="row page-titles">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item active"><a href="~/admin/javascript:void(0)">Amil</a></li>
+                <li class="breadcrumb-item active"><a href="~/admin/javascript:void(0)">Email</a></li>
+                <li class="breadcrumb-item active"><a href="~/admin/javascript:void(0)">Send</a></li>
                 <li class="breadcrumb-item"><a href="~/admin/javascript:void(0)">Read</a></li>
             </ol>
         </div>
@@ -27,47 +28,72 @@
                             </div>
                             <div class="mail-list rounded mt-4">
                                 <a asp-controller="email" asp-action="inbox" class="list-group-item "><i class="fa fa-inbox font-18 align-middle me-2"></i> Inbox <span class="badge badge-primary badge-sm float-end">@ViewData["InboxCount"].ToString()</span> </a>
-                                <a asp-controller="email" asp-action="send" class="list-group-item active"><i class="fa fa-paper-plane font-18 align-middle me-2"></i> Sent   </a>
-
+                                <a asp-controller="email" asp-action="send" class="list-group-item active"><i class="fa fa-paper-plane font-18 align-middle me-2"></i>Send</a>
+                                <a asp-controller="email" asp-action="Reply" class="list-group-item"><i class="bi bi-reply-fill font-18 align-middle me-2"></i>Reply</a>
                             </div>
 
                         </div>
                         <div class="email-right-box ms-0 ms-sm-4 ms-sm-0">
                             <div class="row">
                                 <div class="col-12">
-                                    <div  class="right-box-padding">
-                                        <div class="toolbar mb-4" role="toolbar">
-                                            <div class="btn-group mb-1">
-                                                <button id="@Model.Message.Id" class="btn btn-primary light px-3 message-trash" type="button">
-                                                    <i class="fa-solid fa-trash-can"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                        <div class="read-content">
-                                            <div class="media mb-2 mt-3">
-                                                <div class="media-body">
-                                                    <span class="pull-end">@Model.Message.CreatedDate.ToShortTimeString()</span>
-                                                    <h4 class="my-1 text-primary">@Model.Message.Name</h4>
-                                                    <p class="read-content-email">
-                                                        To: Me, @Model.Message.Email
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <div class="read-content-body">
-                                                <h6 class="mb-4">@Model.Message.Message</h6>
-                                            </div>
 
-                 
-
-                                            <p class="read-content-email">
-                                              Me :
-                                            </p>
-                                            <div class="mb-3 pt-3">
-                                                <p asp-for="Email" id="write-email" cols="30" rows="5" class="form-control"  >@Model.Message.SendEmal</p>
-                                            </div>
+                                    <div class="toolbar mb-4" role="toolbar">
+                                        <div class="btn-group mb-1">
+                                            <button id="@Model.Id" class="btn btn-primary light px-3 message-trash" type="button">
+                                                <i class="fa-solid fa-trash-can"></i>
+                                            </button>
                                         </div>
-                                
                                     </div>
+                                    <div class="read-content">
+                                        <div class="media mb-2 mt-3">
+                                            <div class="media-body">
+                                                <span class="pull-end">@Model.CreatedDate.ToShortTimeString()</span>
+                                                <h4 class="my-1 text-primary">@(Model.Subject)</h4>
+                                                <p class="read-content-email">
+                                                    Sending Method  : @(Model.SendingMethod)
+                                                </p>
+                                                <p class="read-content-email">
+                                                    To: Me,  @(Model.Email != null ? Model.Email : "")
+
+                                                </p>
+                                            </div>
+                                        </div>
+
+                                        <div class="read-content-body">
+                                            <h6 class="mb-4">@Html.Raw(Model.Body)</h6>
+                                        </div>
+
+
+
+                                        <div class="media mb-2 mt-3">
+                                            <div class="media-body">
+
+                                                <p class="read-content-email">
+                                                    File
+
+                                                </p>
+                                                
+                                                @if (Model.FileType == "image")
+                                                {
+                                                    <img src="@Url.Content($"~/client/assets/emailfiles/{Model.FileUrl}")" width="100%" height="550px" />
+                                                }
+                                                else if (Model.FileType == "video")
+                                                {
+                                                    <video controls width="100%" height="550px">
+                                                        <source src="@Url.Content($"~/client/assets/emailfiles/{Model.FileUrl}")" type="video/mp4">
+                                                    </video>
+                                                } 
+                                                else if (Model.FileType == "pdf")
+                                                {
+                                                    <object data="@Url.Content($"~/client/assets/emailfiles/{Model.FileUrl}")" type="application/pdf" width="100%" height="800px">
+                                                        <p>PDF : <a href="@Url.Content($"~/client/assets/emailfiles/{Model.FileUrl}")">@Model.FileUrl</a></p>
+                                                    </object>
+                                                }
+
+                                            </div>
+                                        </div>
+                                    </div>
+
 
                                 </div>
                             </div>
@@ -87,7 +113,7 @@
                 var buttonId = this.id;
                 var id = parseInt(buttonId);
 
-                fetch(`/Admin/Email/EmailDeleteGet/${id}`, {
+                fetch(`/Admin/Email/SendDeleteGet/${id}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded'
@@ -106,7 +132,7 @@
                         console.error('A problem occurred during the fetch operation:', error);
                     });
 
-                window.location.href = "/Admin/Email/Inbox"
+                window.location.href = "/Admin/Email/Send"
             });
         });
 
