--- a/Back/Vanguard/Vanguard/Views/Payment/Index.cshtml
+++ b/Back/Vanguard/Vanguard/Views/Payment/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Vanguard.ViewModels.Book
+﻿@* @using Vanguard.ViewModels.Book
 @model  BookPurchaseVM
 
 @{
@@ -52,4 +52,4 @@
             });
         });
     });
-</script>
+</script> *@
