--- a/Back/Vanguard/Vanguard/wwwroot/cilent/assets/css/product-detail.css
+++ b/Back/Vanguard/Vanguard/wwwroot/cilent/assets/css/product-detail.css
@@ -1482,11 +1482,12 @@ input[type="number"]::-webkit-outer-spin-button {
     /* font-size: 14px; */
 }
 
-.info-box .left-box h3 {
+.info-box .left-box a {
     color: #000000;
     text-transform: capitalize;
     font-weight: 550;
     font-size: 10px;
+    text-decoration:none;
     /* font-size: 16px; */
 }
 
